--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
-name = "partner-onboarding"
+name = "master-data"
 version = "0.1.0"
-description = "onboarding and authenticating partner"
+description = "master data handler"
 authors = ["BMC"]
-packages = [{ include = "authentication" }]
+packages = [{ include = "master" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -21,6 +21,7 @@ redis = "^5.2.1"
 jinja2 = "^3.1.6"
 aiosmtplib = "^4.0.0"
 aioredis = "^2.0.1"
+asyncpg = "^0.30.0"
 
 
 
